# Adventures-of-Gargamel

./: README.md
catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/include/costmap_layers/: Wall.h
catkin_ws/devel/include/detection_msgs/: Detection.h
catkin_ws/devel/include/exercise1/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Greeting.h  ReverseRequest.h  ReverseResponse.h
catkin_ws/devel/include/exercise4/: Person.h  turtle_pos.h
catkin_ws/devel/include/exercise6/: Cylinder.h  Cylinder_sensor.h  Ring.h
catkin_ws/devel/include/ferns_detector/: DetectedPoint.h  Detection.h  ModelStatus.h
catkin_ws/devel/include/localizer/: LocalizeRequest.h  LocalizeResponse.h
catkin_ws/devel/include/vaja01/: ArrayOfInts.h  ArrayOfIntsRequest.h  ArrayOfIntsResponse.h  string_ID.h
catkin_ws/devel/include/vaja02/: Movement.h  MovementRequest.h  (+1 more)
catkin_ws/src/exercise1/: CMakeLists.txt
catkin_ws/src/exercise4/: CMakeLists.txt
catkin_ws/src/exercise4/data/: hair_data_embed.npz  length_data_embed.npz  train_test_data.npz
catkin_ws/src/exercise4/launch/: ex4.launch  facedetector.launch
catkin_ws/src/exercise4/msg/: Person.msg  turtle_pos.msg
catkin_ws/src/exercise4/scripts/: face_localizer  face_localizer_dnn.py  movebase_client.py
catkin_ws/src/exercise6/: CMakeLists.txt
catkin_ws/src/new_practise_world/: README.txt
catkin_ws/src/take_picture/: CMakeLists.txt
catkin_ws/src/task1_materials/: rins_world.launch
catkin_ws/src/vaja01/: CMakeLists.txt  README.txt  package.xml
catkin_ws/src/vaja02/: CMakeLists.txt  README.txt
(+262 files in other folders)
